syntax = "proto3";

package io.lionweb.protobuf;

option java_multiple_files = true;
option java_package = "io.lionweb.protobuf";
option java_outer_classname = "ChunkProtos";

message PBChunk {
  string serializationFormatVersion = 1;
  // We use this mechanism both to save space and to represent nulls (identified by -1)
  repeated string stringValues = 2;
  repeated PBMetaPointer metaPointers= 3;
  repeated PBLanguage languages = 4;
  repeated PBNode nodes = 5;

}

message PBLanguage {
  int32 key = 1;
  int32 version = 2;
}

message PBNode {
  int32 id = 1;
  int32 classifier = 2;
  repeated PBProperty properties = 3;
  repeated PBContainment containments = 4;
  repeated PBReference references = 5;
  /* This is a list of indexes representing the string values corresponding to the IDs of the annotations */
  repeated int32 annotations = 6;
  /* Optional*/ int32 parent = 7;
}

message PBMetaPointer {
  int32 language = 1;
  int32 version = 2;
  int32 key = 3;
}

message PBProperty {
  int32 metaPointerIndex = 1;
  /* Optional*/ int32 value = 2;
}

message PBContainment {
  int32 metaPointerIndex = 1;
  repeated int32 children = 2;
}

message PBReference {
  int32 metaPointerIndex = 1;
  repeated PBReferenceValue values = 2;
}

message PBReferenceValue {
  /* Optional*/ int32 resolveInfo = 1;
  /* Optional*/ int32 referred = 2;
}
